unpackaged/main/default/objects/Community_Registration_Setting__mdt/Community_Registration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Community Registration Setting</label>
    <pluralLabel>Community Registration Settings</pluralLabel>
</CustomObject>