unpackaged/main/default/objects/Community_Registration_Setting__mdt/fields/Associated_Contact_Limit__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_Limit__c</fullName>
    <label>Associated Contact Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>