unpackaged/main/default/objects/Community_Registration_Setting__mdt/fields/Community_User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Profile_Name__c</fullName>
    <label>Community User Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>