unpackaged/main/default/objects/Community_Registration_Setting__mdt/fields/Social_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Social_Account_Name__c</fullName>
    <label>Social Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>