unpackaged/main/default/objects/Community_Registration_Setting__mdt/fields/Standard_User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Standard_User_Profile_Name__c</fullName>
    <label>Standard User Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>