unpackaged/main/default/objects/Community_Registration_Setting__mdt/fields/Username_Appended_String__c.field-meta.xml
<CustomField>
    <fullName>Username_Appended_String__c</fullName>
    <label>Username Appended String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>